<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotActivity"
    android:background="@color/primary_grey">

    <TextView
        android:id="@+id/forgotHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_senha"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:background="@drawable/rounded_header"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/instrucoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insira_o_e_mail_cadastrado_para_nenvio_das_instru_es"
        android:layout_below="@+id/forgotHeader"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/emailForgot"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/instrucoes"
        android:layout_marginTop="80dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/robo_light"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/buttonForgot"
        android:layout_below="@+id/emailForgot"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_button"
        android:text="@string/prosseguir"
        android:fontFamily="@font/roboto_medium"
        android:textAllCaps="false"
        android:textSize="18sp"/>

</RelativeLayout>